made some changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>sm64js</title>
+    <title>beta64js</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -16,18 +16,17 @@
     <div class="cover-container d-flex h-100 mx-auto flex-column">
         <header class="masthead">
             <div class="inner">
-                <h3 class="masthead-brand rainbowText">Super Mario 64 JS</h3>
+                <h3 class="masthead-brand rainbowText">Beta 64 JS</h3>
                 <nav class="nav nav-masthead justify-content-center">
                     <a class="nav-link" href="#What">About</a>
-                    <a class="nav-link" href="https://github.com/sm64js/sm64js">Source Code</a>
-                    <a class="nav-link" href="https://discord.gg/7UaDnJt">Discord Server</a>
+                    <a class="nav-link" href="https://github.com/XKoop7321/Beta64JS">Source Code</a>
                     <a class="nav-link" href="#Contact">Contact</a>
                 </nav>
             </div>
         </header>
 
         <main role="main" class="inner cover" hidden id="mainContent">
-            <h1 class="cover-heading rainbowText">Super Mario 64 - Javascript Port</h1>
+            <h1 class="cover-heading rainbowText">Beta 64 JS</h1>
             <h6 style="color:red">This project is currently still being developed. This page may be live from time to time for testing, but there may be glitches and performance issues. The server will go down and restart at random times without warning. If you would like to help with the project or have feedback please contact me.</h6>
             <form id="romSelect" class="form-group">
                 <h4 style="color:#fa3e3e">Select US sm64 (z64) ROM File from your computer</h4>
@@ -37,7 +36,7 @@
             <h6 id="romMessage">This project uses the textures and other game assets from the original game. Due to copyright issues, I cannot host those assets on this site. Please select a sm64 ROM to extract those assets before you can play.</h6>
             <div class="row" style="justify-content:center">
                 <button id="startbutton" type="button" class="btn btn-success" disabled>Start Game</button>
-                <a href="https://github.com/sm64js/sm64js/issues" style="margin-left:30px" type="button" class="btn btn-warning">Submit Bug</a>
+                <a href="https://github.com/XKoop7321/Beta64JS/issues" style="margin-left:30px" type="button" class="btn btn-warning">Submit Bug</a>
             </div>
 
             <div class="row" style="justify-content:center; padding-top:10px">
@@ -189,31 +188,14 @@
             <a name="What"></a>
             <h4>What is this?</h4>
             <p>
-                This is an ongoing work-in-progress port of the <a href="https://github.com/n64decomp/sm64">decompilation</a> of original Nintendo game, Super Mario 64, to native Javascript (No Emulation) (No Web Assembly).
-                This project required creating a Javascript WebGL port of <a href="https://github.com/Emill/n64-fast3d-engine">N64 Fast 3D Renderer</a> originally implemented with OpenGL in C. This project also includes the development of online mass multiplayer versions of sm64js and other custom multiplayer game modes.
+            this is sm64js but beta sm64
             </p>
             <br />
 
             <a name="Purpose"></a>
-            <h4>What is the purpose of this port?</h4>
-            <ul style="display:inline-block;vertical-align:middle;text-align:left">
-                <li>
-                    <b>Extensibility:</b> More access to more developers to add custom content
-                    <ul style="padding-left:40px">
-                        <li>Rapid Prototyping</li>
-                        <li>More friendly to importing other software modules/packages</li>
-                        <li>More friendly to prototyping multiplayer custom games/mods</li>
-                    </ul>
-                </li>
-                <li><b>Portablity:</b> Sm64 projects can run on any device with a web browser anywhere without needing to download or install anything</li>
-                <li>Opportunity to refactor / rewrite with modern coding style and cleanup</li>
-            </ul>
+            <h4>What is the purpose of Beta64JS?</h4>
+            <li>I have an interest for beta sm64</li>
             <br />
-            <br />
-
-            <a name="WASM"></a>
-            <h4>What's wrong with Web Assembly / Emscripten</h4>
-            <p>Nothing. However, I believe access to this game's source code in a higher level programming language opens it up to a wider pool of potentially capable developers / modders. And seems to me like a natural next step following in the amazing work done by the decomp team and pc port.</p>
             <br />
 
             <a name="Credits"></a>
