--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,9 @@
 
             <a name="Purpose"></a>
             <h4>What is the purpose of Beta64JS?</h4>
-            <li>I have an interest for beta sm64</li>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
             <br />
             <br />
 
