--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="https://juicy-kerianne-beta64js-eec76cf5.koyeb.app" target="_blank">To play beta64js (which is always online), click here.</a>
+<p>To play beta64js, <a href="https://juicy-kerianne-beta64js-eec76cf5.koyeb.app">click here</a>.</p>
