--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script>
+    window.myMario.skinData = window.parseColorCode("8107EC40 FF4D 8107EC42 0000 8107EC38 4000 8107EC3A 0000 8107ECA0 4406 8107ECA2 0000 8107EC98 1000 8107EC9A 0000 8107EC88 FEC1 8107EC8A 7900 8107EC80 4030 8107EC82 2000 8107EC58 FFFF 8107EC5A FF00 8107EC50 4040 8107EC52 4000 8107EC28 0000 8107EC2A FF00 8107EC68 1C08 8107EC6A 0400 8107EC20 0000 8107EC22 4400 8107EC70 721C 8107EC72 0E00");
+    </script>
 </head>
 
 <body class="text-center">
